--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Bootstrap demo</title>
+  <title>Lakshya Grover</title>
   <script src="js/script.js" type="text/javascript"></script>
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/phone.css">
@@ -30,7 +30,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg bg-body-tertiary w-100 fixed-top">
     <div class="container-fluid d-flex flex-row justify-content-between">
-      <a class="navbar-brand" href="#">portfolio</a>
+      <a class="navbar-brand" href="#">LG</a>
 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -170,7 +170,7 @@
             <div class="card-body">
               <h5 class="card-title">Keep Notes</h5>
               <p class="card-text">it helps us to remember the things we forgot by adding notes then delete the mote after the task is done.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <a href="https://statuesque-baklava-361a1d.netlify.app/" class="btn btn-primary">Go somewhere</a>
             </div>
           </div>
           <div class="card mb-4" style="width: 18rem;">
